syntax = "proto3";

package pb;

import "services/modules/module.proto";
import "services/worlds/world.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";

message RunFetcherRequest {
  repeated int32 moduleIds = 1;
  repeated int32 worldIds = 2;
  repeated int32 systemIds = 3;
  repeated int32 questIds = 4;
  repeated int32 characterIds = 5;
  repeated int32 entityIds = 6;
  repeated int32 postIds = 7;
  repeated int32 imageIds = 8;
  repeated int32 locationIds = 9;
  repeated int32 mapIds = 10;
}

message RunFetcherResponse {
  repeated Module modules = 1;
  repeated World worlds = 2;
}